# neon-traffic-simulator

./: .gitignore  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  NOTICE  README.md  SECURITY.md
.github/workflows/: ci.yml  codeql.yml  determinism.yml  preflight.yml  sanitizers.yml
examples/grid4/: lights.csv  vehicles.csv
examples/grid4/network/: edges.csv  nodes.csv
include/neon/: sim.hpp
include/project/: csv.hpp  network.hpp  simulator.hpp
legacy_source/original_project/: .clang-format  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  README.md  REUSE.toml
legacy_source/original_project/.devcontainer/: devcontainer.json
legacy_source/original_project/.github/: PULL_REQUEST_TEMPLATE.md
legacy_source/original_project/.github/workflows/: ci.yml  codeql.yml  determinism.yml  preflight.yml  release.yml  sanitizers.yml  sbom.yml  scorecard.yml
legacy_source/original_project/benchmarks/: bench_basic.cpp
legacy_source/original_project/docs/: COMPLIANCE.md  GITHUB_GREEN_LOCK_REPORT.md  SLSA.md  VERIFICATION_REPORT.md
legacy_source/original_project/docs/design/adrs/: adr-0001-architecture.md
legacy_source/original_project/docs/policies/: accessibility.md  ethics.md  sustainability.md
legacy_source/original_project/docs/press/: press-kit.md
legacy_source/original_project/examples/: scenario.json
legacy_source/original_project/examples/grid4/network/: edges.csv  nodes.csv
legacy_source/original_project/fuzz/: fuzz_parser.cpp
legacy_source/original_project/include/neon/: sim.hpp
legacy_source/original_project/include/project/: log.hpp  network.hpp  vehicle.hpp
legacy_source/original_project/legacy_source/original_project/: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Doxyfile  NOTICE  SUPPORT.md
legacy_source/original_project/legacy_source/original_project/docs/: GITHUB_PREFLIGHT_REPORT.md  WHITEPAPER.md
legacy_source/original_project/legacy_source/original_project/docs/api/: overview.md
legacy_source/original_project/legacy_source/original_project/docs/design/: architecture.md
legacy_source/original_project/legacy_source/original_project/docs/guides/: quickstart.md
legacy_source/original_project/legacy_source/original_project/docs/security/: threat-model.md
legacy_source/original_project/legacy_source/original_project/examples/grid4/: lights.csv  vehicles.csv
legacy_source/original_project/legacy_source/original_project/include/project/: csv.hpp  simulator.hpp  traffic_light.hpp
legacy_source/original_project/legacy_source/original_project/legacy_upload_reference/: README.md
legacy_source/original_project/legacy_source/original_project/src/main/: cli_main.cpp
legacy_source/original_project/legacy_source/original_project/src/project/: network.cpp  simulator.cpp  traffic_light.cpp
legacy_source/original_project/legacy_source/original_project/tests/golden/: metrics_example.csv
legacy_source/original_project/legacy_source/original_project/tests/unit/: test_csv.cpp  test_lights.cpp
legacy_source/original_project/legacy_upload_reference/: .gitignore  CMakeLists.txt
legacy_source/original_project/legacy_upload_reference/src/: main.cpp
legacy_source/original_project/src/core/: sim.cpp
legacy_source/original_project/src/main/: cli.cpp
legacy_source/original_project/src/project/: csv.cpp  vehicle.cpp
legacy_source/original_project/src/tools/: geojson.cpp  gridgen.cpp  scenario.cpp  validate.cpp  vehgen.cpp
legacy_source/original_project/tests/: test_basic.cpp
legacy_source/original_project/tests/golden/: README.md
legacy_source/original_project/tests/unit/: test_astar.cpp  test_basic.cpp  test_path.cpp
src/core/: sim.cpp
src/main/: cli.cpp  cli_main.cpp
src/project/: csv.cpp  network.cpp  simulator.cpp
src/tools/: geojson.cpp
tests/unit/: test_basic.cpp
